--- a/scss/_colors.scss
+++ b/scss/_colors.scss
@@ -6,6 +6,8 @@ $lightest-grey: #f3f3f3; // Form input backgrounds
 $light-grey: #efefef;
 $medium-grey: #dfdfdf; // Post borders
 $darker-grey: #cbcbcb; // Currently only horizontal rules I think?
+$dark-grey: #aaa;
+$darkest-grey: #666;
 
 $light-blue: #338fc2; // Links
 $sweet-red: #ce1717; // The Best Red (TM). Navbar, hovers, buttons, etc.
