--- a/scss/index.scss
+++ b/scss/index.scss
@@ -5,5 +5,8 @@
 @import 'layout';
 @import 'navbar';
 @import 'forms';
+@import 'images';
+@import 'posts-comments';
 @import 'weird-bootstrap-rules';
 @import 'logged-out';
+@import 'miscellanea';
