--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -17,7 +17,7 @@
             {{/each}}
         </div>
         <p style="text-align: center;">
-            <a class="button button-large button-centered" href="/about">Learn more</a>
+            <a class="button large-button button-centered" href="/about">Learn more</a>
         </p>
     </div>
     <div class="col-md-4">
@@ -34,7 +34,7 @@
                 <label for="password">Password</label>
             </div>
 
-            <button class="button button-large button-full-width" type="submit">Log in</button>
+            <button class="button large-button full-width-button" type="submit">Log in</button>
             <a class="help-link" href="/forgot-password">Forgot password?</a>
         </form>
 
@@ -60,7 +60,7 @@
                 <label for="passwordrepeat">Repeat password</label>
             </div>
 
-            <button class="button button-large button-full-width" type="submit">Sign up</button>
+            <button class="button large-button full-width-button" type="submit">Sign up</button>
         </form>
     </div>
 </div>
