--- a/views/partials/scriptPartials/newCommentFormTemplate.handlebars
+++ b/views/partials/scriptPartials/newCommentFormTemplate.handlebars
@@ -13,7 +13,7 @@
       <button class="btn btn-primary btn-fade ml-3 link-add">Please Add This Link He Is A Good Link</button>
     </div>
   </div>
-  <div class="form-row my-2 card p-1 replyEmojiWindow" style="display:none">
+  <div class="form-row my-2 p-1 emoji-picker" style="display:none">
       <button type="button" class="add-emoji">🍬</button>
       <button type="button" class="add-emoji">🍭</button>
       <button type="button" class="add-emoji">🍡</button>
