--- a/views/resend-token.handlebars
+++ b/views/resend-token.handlebars
@@ -13,7 +13,7 @@
               <label for="email">Email</label>
           </div>
 
-          <button class="button button-large button-full-width" type="submit">Resend</button>
+          <button class="button large-button full-width-button" type="submit">Resend</button>
         </form>
 
     </div>
