--- a/views/verify-email.handlebars
+++ b/views/verify-email.handlebars
@@ -15,7 +15,7 @@
 
             <input type="hidden" class="form-control" name="verificationToken" value="{{token}}" required>
 
-            <button class="button button-large button-full-width" type="submit">Verify</button>
+            <button class="button large-button full-width-button" type="submit">Verify</button>
         </form>
 
     </div>
