--- a/views/partials/newreplyform.handlebars
+++ b/views/partials/newreplyform.handlebars
@@ -5,7 +5,7 @@
       <p><br></p>
     </div>
   </div>
-  <div class="form-row mt-2 card p-1 replyEmojiWindow" style="display:none">
+  <div class="form-row mt-2 p-1 emoji-picker" style="display:none">
     {{> emojilist }}
   </div>
   <div class="link-form-cont"> {{! this is only here bc jquery applies display:block when it slides something down, which would break the below div if it slid down that}}
