--- a/views/reset-password.handlebars
+++ b/views/reset-password.handlebars
@@ -14,7 +14,7 @@
                 <label for="passwordrepeat">Repeat new password</label>
             </div>
 
-            <button class="button button-large button-full-width" type="submit">Reset password</button>
+            <button class="button large-button full-width-button" type="submit">Reset password</button>
         </form>
 
     </div>
